--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -682,6 +682,7 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
+allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.61.60;
@@ -1039,6 +1040,7 @@ allow 45.95.169.14;
 allow 45.95.169.230;
 allow 45.95.169.252;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1056,6 +1058,7 @@ allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.230.119.146;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
