--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -124,7 +124,6 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 13.126.29.181;
-set_real_ip_from 13.232.154.134;
 set_real_ip_from 135.125.239.70;
 set_real_ip_from 136.175.8.45;
 set_real_ip_from 136.244.111.163;
@@ -624,7 +623,6 @@ set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.42.196.34;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.87.55.98;
-set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.47.238.176;
@@ -886,6 +884,7 @@ set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
+set_real_ip_from 217.154.21.121;
 set_real_ip_from 217.199.199.250;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
@@ -1185,6 +1184,7 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2479:0:6e00::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1279,7 +1279,6 @@ set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:b280:fe01:61::a;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-set_real_ip_from 2a0b:64c0:f802:1::a;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
 set_real_ip_from 2a0b:f4c0:16c:11::1;
@@ -1515,6 +1514,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:64;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b01b:1337:2;
+set_real_ip_from 2a0e:97c0:3e3:460:1337:b02b:1337:3;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b03b:1337:4;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
@@ -1537,6 +1537,7 @@ set_real_ip_from 2a0f:7803:fac5:cd0::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:5bdd::beef;
 set_real_ip_from 2a0f:ca80::1260:4bff:fea4:19b0;
+set_real_ip_from 2a0f:ca80::2e59:e5ff:fe49:3738;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
@@ -1609,9 +1610,7 @@ set_real_ip_from 2a10:1fc0:10::fdb0:ba7f;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a11:6100:0:1467::;
-set_real_ip_from 2a11:6100:0:156b::;
 set_real_ip_from 2a11:6100:0:1e6a::1;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
@@ -1678,7 +1677,6 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
 set_real_ip_from 31.220.75.237;
-set_real_ip_from 31.42.177.222;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
@@ -1707,6 +1705,7 @@ set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
+set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.70.158;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
@@ -1722,8 +1721,6 @@ set_real_ip_from 45.138.16.248;
 set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.69;
 set_real_ip_from 45.138.16.76;
-set_real_ip_from 45.139.50.202;
-set_real_ip_from 45.139.50.204;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
@@ -2025,7 +2022,6 @@ set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
-set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
