--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -108,7 +108,7 @@ deny 109.71.252.88;
 deny 109.71.252.97;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 114.41.6.86;
+deny 1.170.235.164;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -623,6 +623,7 @@ deny 194.26.192.77;
 deny 194.42.196.34;
 deny 194.53.137.156;
 deny 194.87.55.98;
+deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.47.238.176;
@@ -884,7 +885,6 @@ deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
-deny 217.154.21.121;
 deny 217.199.199.250;
 deny 23.137.248.100;
 deny 23.137.248.192;
@@ -1184,7 +1184,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2479:0:6e00::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1530,8 +1529,6 @@ deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc0:0:8::a84e;
 deny 2a0e:bfc2:0:24::3456;
 deny 2a0e:bfc2:0:2c::1;
-deny 2a0e:bfc7:0:3::2d83;
-deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
 deny 2a0f:7803:fac5:cd0::1;
 deny 2a0f:85c1:356:3238::1;
@@ -1610,6 +1607,7 @@ deny 2a10:1fc0:10::fdb0:ba7f;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a11:6100:0:1467::;
 deny 2a11:6100:0:1e6a::1;
 deny 2a12:a800:11:1:124:198:131:108;
@@ -1676,7 +1674,6 @@ deny 2c0f:6c0:0:3::479d;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
-deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.114.50.124;
@@ -1694,6 +1691,7 @@ deny 37.228.129.63;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1807,8 +1805,6 @@ deny 45.90.185.119;
 deny 45.90.185.67;
 deny 45.90.185.68;
 deny 45.91.250.107;
-deny 45.9.156.100;
-deny 45.9.156.101;
 deny 45.9.168.103;
 deny 45.9.168.108;
 deny 45.9.168.18;
