--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -64,6 +64,45 @@ set_real_ip_from 2001:67c:e28:1::103;
 set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:173;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:174;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:175;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:176;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:177;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:178;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:179;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:180;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:181;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:182;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:183;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:184;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:185;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:186;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:191;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:192;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:193;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:194;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:195;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:196;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:197;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:198;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:199;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:200;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:201;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:202;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:203;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:208;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:209;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:210;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:211;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:212;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:213;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:214;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:215;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:216;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:217;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:21:57:0:1:f6ab:cb24;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
@@ -116,6 +155,7 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
+set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -319,6 +359,7 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2479:0:6e00::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -381,11 +422,7 @@ set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
-set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
-set_real_ip_from 2a05:b0c7:67c6::1;
-set_real_ip_from 2a05:b0c7:6949::1;
-set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
