Update lists at 20250523-1501

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -70,6 +70,7 @@ deny 107.189.4.12;
 deny 107.189.4.209;
 deny 107.189.5.121;
 deny 107.189.5.188;
+deny 107.189.5.249;
 deny 107.189.5.7;
 deny 107.189.6.124;
 deny 107.189.7.141;
@@ -161,7 +162,6 @@ deny 161.129.68.162;
 deny 162.210.173.17;
 deny 162.216.18.62;
 deny 162.247.72.192;
-deny 162.247.72.199;
 deny 162.247.74.200;
 deny 162.247.74.201;
 deny 162.247.74.202;
@@ -676,6 +676,7 @@ deny 198.98.48.33;
 deny 198.98.48.35;
 deny 198.98.50.199;
 deny 198.98.51.189;
+deny 198.98.51.249;
 deny 198.98.57.151;
 deny 198.98.57.74;
 deny 198.98.61.60;
@@ -945,7 +946,6 @@ deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
-deny 217.154.21.121;
 deny 217.199.199.250;
 deny 23.137.248.100;
 deny 23.137.248.192;
@@ -1001,6 +1001,7 @@ deny 2401:c080:1c02:2d4::;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
+deny 2407:1c00:6100:5640::;
 deny 2407:3640:2207:8882::1;
 deny 2407:3640:2259:6302::1;
 deny 2407:3641:2259:8208::1;
@@ -1038,12 +1039,12 @@ deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::c;
-deny 2602:fef9:100:1100::199;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
 deny 2605:6400:10:1362::2;
+deny 2605:6400:10:1ab:2605:6400:10:1ab;
 deny 2605:6400:10:44f::1;
 deny 2605:6400:10:58f:8768:8283:1a62:bdc6;
 deny 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1065,6 +1066,7 @@ deny 2605:6400:30:ed0c:b477:4972:756a:2f42;
 deny 2605:6400:30:edc3::34;
 deny 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 deny 2605:6400:30:efba:dead::;
+deny 2605:6400:30:f04d:2605:6400:30:30;
 deny 2605:6400:30:f05d:c272:5525:72b1:e64c;
 deny 2605:6400:30:f060:be62:b857:b818:9144;
 deny 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1247,8 +1249,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2479:0:6e00::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:898:218::1;
@@ -1271,6 +1271,7 @@ deny 2a03:4000:28:1e8::69;
 deny 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 deny 2a03:4000:37:3:e842:2ff:feb9:c49c;
 deny 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
+deny 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 deny 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 deny 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 deny 2a03:4000:62:8:c855:23ff:fef6:50ee;
@@ -1298,7 +1299,6 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1622,54 +1622,6 @@ deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
-deny 2a10:1fc0:10::19eb:717b;
-deny 2a10:1fc0:10::28fc:90d4;
-deny 2a10:1fc0:10::2a17:5b54;
-deny 2a10:1fc0:10::2cf4:6ba2;
-deny 2a10:1fc0:10::2d91:1a2d;
-deny 2a10:1fc0:10::3903:457;
-deny 2a10:1fc0:10::3919:de17;
-deny 2a10:1fc0:10::3a1:5e9f;
-deny 2a10:1fc0:10::3dc5:e694;
-deny 2a10:1fc0:10::3eb3:d1d0;
-deny 2a10:1fc0:10::3ec1:2b1e;
-deny 2a10:1fc0:10::40d8:83c;
-deny 2a10:1fc0:10::42d2:f78b;
-deny 2a10:1fc0:10::5138:4dfa;
-deny 2a10:1fc0:10::5719:261d;
-deny 2a10:1fc0:10::61d9:7617;
-deny 2a10:1fc0:10::61e2:c84d;
-deny 2a10:1fc0:10::627f:3c31;
-deny 2a10:1fc0:10::694a:c359;
-deny 2a10:1fc0:10::6b4c:30fc;
-deny 2a10:1fc0:10::6c2e:469a;
-deny 2a10:1fc0:10::6d92:d6ab;
-deny 2a10:1fc0:10::6fde:4b8d;
-deny 2a10:1fc0:10::792f:38b4;
-deny 2a10:1fc0:10::895d:abf9;
-deny 2a10:1fc0:10::8a03:d023;
-deny 2a10:1fc0:10::8b78:d42e;
-deny 2a10:1fc0:10::8d4d:eca2;
-deny 2a10:1fc0:10::9a73:d4f2;
-deny 2a10:1fc0:10::9d80:c9f7;
-deny 2a10:1fc0:10::9e08:e765;
-deny 2a10:1fc0:10::a3a5:49da;
-deny 2a10:1fc0:10::a458:8b37;
-deny 2a10:1fc0:10::a63c:724c;
-deny 2a10:1fc0:10::b571:1205;
-deny 2a10:1fc0:10::bf3f:d195;
-deny 2a10:1fc0:10::c129:61a1;
-deny 2a10:1fc0:10::c385:c7fa;
-deny 2a10:1fc0:10::c7c7:2f84;
-deny 2a10:1fc0:10::d5a6:a292;
-deny 2a10:1fc0:10::d5d0:db30;
-deny 2a10:1fc0:10::d6b7:b3e9;
-deny 2a10:1fc0:10::dbe0:6173;
-deny 2a10:1fc0:10::dbe9:7852;
-deny 2a10:1fc0:10::e4c8:9020;
-deny 2a10:1fc0:10::ea87:5496;
-deny 2a10:1fc0:10::fa6c:cac5;
-deny 2a10:1fc0:10::fdb0:ba7f;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1769,6 +1721,7 @@ deny 38.97.116.244;
 deny 45.11.59.28;
 deny 45.12.3.80;
 deny 45.128.133.242;
+deny 45.132.246.245;
 deny 45.13.225.69;
 deny 45.13.225.78;
 deny 45.133.74.53;
@@ -1886,11 +1839,9 @@ deny 45.95.169.14;
 deny 45.95.169.230;
 deny 45.95.169.252;
 deny 46.165.243.36;
-deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
-deny 46.249.49.183;
 deny 46.250.243.29;
 deny 46.30.188.218;
 deny 47.254.142.180;
@@ -1906,7 +1857,6 @@ deny 5.181.80.107;
 deny 5.196.95.34;
 deny 5.230.119.146;
 deny 5.253.247.27;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1987,30 +1937,6 @@ deny 84.19.182.20;
 deny 84.211.226.13;
 deny 84.239.46.144;
 deny 85.239.41.130;
-deny 85.239.55.11;
-deny 85.239.55.110;
-deny 85.239.55.112;
-deny 85.239.55.114;
-deny 85.239.55.123;
-deny 85.239.55.132;
-deny 85.239.55.168;
-deny 85.239.55.173;
-deny 85.239.55.174;
-deny 85.239.55.184;
-deny 85.239.55.189;
-deny 85.239.55.192;
-deny 85.239.55.201;
-deny 85.239.55.228;
-deny 85.239.55.230;
-deny 85.239.55.239;
-deny 85.239.55.24;
-deny 85.239.55.249;
-deny 85.239.55.25;
-deny 85.239.55.250;
-deny 85.239.55.31;
-deny 85.239.55.37;
-deny 85.239.55.51;
-deny 85.239.55.80;
 deny 85.93.218.204;
 deny 86.54.28.49;
 deny 87.118.110.27;
@@ -2054,30 +1980,6 @@ deny 91.219.236.101;
 deny 91.219.236.91;
 deny 91.219.237.39;
 deny 91.227.114.153;
-deny 91.227.77.107;
-deny 91.227.77.108;
-deny 91.227.77.119;
-deny 91.227.77.125;
-deny 91.227.77.139;
-deny 91.227.77.158;
-deny 91.227.77.160;
-deny 91.227.77.181;
-deny 91.227.77.193;
-deny 91.227.77.200;
-deny 91.227.77.208;
-deny 91.227.77.209;
-deny 91.227.77.226;
-deny 91.227.77.229;
-deny 91.227.77.237;
-deny 91.227.77.25;
-deny 91.227.77.31;
-deny 91.227.77.36;
-deny 91.227.77.44;
-deny 91.227.77.48;
-deny 91.227.77.51;
-deny 91.227.77.54;
-deny 91.227.77.62;
-deny 91.227.77.97;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
@@ -2112,4 +2014,5 @@ deny 95.143.193.125;
 deny 95.211.174.137;
 deny 95.211.244.28;
 deny 95.216.107.148;
+deny 97.74.89.52;
 deny 98.128.173.33;
