--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -122,6 +122,7 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2407:1c00:6100:5640::;
 allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
@@ -152,12 +153,12 @@ allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::c;
-allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1362::2;
+allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -179,6 +180,7 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
+allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -360,8 +362,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2479:0:6e00::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
@@ -384,6 +384,7 @@ allow 2a03:4000:28:1e8::69;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
+allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 allow 2a03:4000:62:8:c855:23ff:fef6:50ee;
@@ -411,7 +412,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -735,54 +735,6 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
-allow 2a10:1fc0:10::19eb:717b;
-allow 2a10:1fc0:10::28fc:90d4;
-allow 2a10:1fc0:10::2a17:5b54;
-allow 2a10:1fc0:10::2cf4:6ba2;
-allow 2a10:1fc0:10::2d91:1a2d;
-allow 2a10:1fc0:10::3903:457;
-allow 2a10:1fc0:10::3919:de17;
-allow 2a10:1fc0:10::3a1:5e9f;
-allow 2a10:1fc0:10::3dc5:e694;
-allow 2a10:1fc0:10::3eb3:d1d0;
-allow 2a10:1fc0:10::3ec1:2b1e;
-allow 2a10:1fc0:10::40d8:83c;
-allow 2a10:1fc0:10::42d2:f78b;
-allow 2a10:1fc0:10::5138:4dfa;
-allow 2a10:1fc0:10::5719:261d;
-allow 2a10:1fc0:10::61d9:7617;
-allow 2a10:1fc0:10::61e2:c84d;
-allow 2a10:1fc0:10::627f:3c31;
-allow 2a10:1fc0:10::694a:c359;
-allow 2a10:1fc0:10::6b4c:30fc;
-allow 2a10:1fc0:10::6c2e:469a;
-allow 2a10:1fc0:10::6d92:d6ab;
-allow 2a10:1fc0:10::6fde:4b8d;
-allow 2a10:1fc0:10::792f:38b4;
-allow 2a10:1fc0:10::895d:abf9;
-allow 2a10:1fc0:10::8a03:d023;
-allow 2a10:1fc0:10::8b78:d42e;
-allow 2a10:1fc0:10::8d4d:eca2;
-allow 2a10:1fc0:10::9a73:d4f2;
-allow 2a10:1fc0:10::9d80:c9f7;
-allow 2a10:1fc0:10::9e08:e765;
-allow 2a10:1fc0:10::a3a5:49da;
-allow 2a10:1fc0:10::a458:8b37;
-allow 2a10:1fc0:10::a63c:724c;
-allow 2a10:1fc0:10::b571:1205;
-allow 2a10:1fc0:10::bf3f:d195;
-allow 2a10:1fc0:10::c129:61a1;
-allow 2a10:1fc0:10::c385:c7fa;
-allow 2a10:1fc0:10::c7c7:2f84;
-allow 2a10:1fc0:10::d5a6:a292;
-allow 2a10:1fc0:10::d5d0:db30;
-allow 2a10:1fc0:10::d6b7:b3e9;
-allow 2a10:1fc0:10::dbe0:6173;
-allow 2a10:1fc0:10::dbe9:7852;
-allow 2a10:1fc0:10::e4c8:9020;
-allow 2a10:1fc0:10::ea87:5496;
-allow 2a10:1fc0:10::fa6c:cac5;
-allow 2a10:1fc0:10::fdb0:ba7f;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
